# Tugas_SNA_kelompok

./: Dockerfile  README.md  azure-piplines.yml  requirements.txt  run.bat
.github/workflows/: CI-CD-pipeline.yml  ci.yml
CI-CD pipeline/: CI-CD-pipeline.yml
Calculator-DevOps/: pyproject.toml  requirements.txt  run.sh
Calculator-DevOps/src/: app.py
Calculator-DevOps/tests/: test_app.py
src/: app.py
src/templates/: index.html
tests/: test_app.py
