[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-calc-web"
version = "0.1.0"
description = "Flask calculator with Jinja2 templates and a pyhtml component"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.3",
    "jinja2==3.1.4",
    "pyhtml==1.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
